Fixed html css styling along with adding problem data and wiring up master-detail view in landing.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>DSA Practice w/ AI Tutor</title>
-    <link rel="stylesheet" href="../dsaide/css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <div class="container">
@@ -37,6 +37,6 @@
     </div>
 
     <!-- JS that enables the master-detail dynamic view -->
-    <script src="../dsaide/js/landing.js"></script>
+    <script src="/js/landing.js"></script>
   </body>
 </html>
